# cga-lab

./: .gitignore  .gitmodules
src/: CMakeLists.txt
src/khaki/: CMakeLists.txt  khaki.h
src/test/: CMakeLists.txt  khaki.cpp  main.cpp
tex/: .latexmkrc  README.md  Themes.drawio  report.tex
tex/tex/: abstract.tex  content.tex  literature.bib  macros.tex  style.tex  teaser.tex
tex/tex/lang/: english.tex  german.tex
